RESOLVED FIXED186471
MediaTrackCapabilities.deviceId and groupId are not hashed.
https://bugs.webkit.org/show_bug.cgi?id=186471
Summary MediaTrackCapabilities.deviceId and groupId are not hashed.
jianjun.zhu
Reported 2018-06-10 01:49:06 PDT
MediaTrackCapabilities.deviceId and groupId are not hashed.
Attachments
Patch (3.99 KB, patch)
2018-06-10 01:52 PDT, jianjun.zhu
no flags
Patch (7.28 KB, patch)
2018-06-10 23:33 PDT, jianjun.zhu
no flags
Patch (7.29 KB, patch)
2018-06-11 18:54 PDT, jianjun.zhu
no flags
jianjun.zhu
Comment 1 2018-06-10 01:52:03 PDT
youenn fablet
Comment 2 2018-06-10 08:26:40 PDT
Can we add a tes validating that track ids match enuerateDevice ids?
jianjun.zhu
Comment 3 2018-06-10 09:00:35 PDT
(In reply to youenn fablet from comment #2) > Can we add a tes validating that track ids match enuerateDevice ids? I'll try to add an assertion to MediaStreamTrack-getCapabilities.html.
jianjun.zhu
Comment 4 2018-06-10 23:33:07 PDT
Eric Carlson
Comment 5 2018-06-11 09:04:26 PDT
Comment on attachment 342412 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=342412&action=review Thank you for the fix! > LayoutTests/fast/mediastream/MediaStreamTrack-getCapabilities.html:47 > + if(trackKind !== 'audio' && trackKind !== 'video') Nit: tests typically have a space between "if" and "(" > LayoutTests/fast/mediastream/MediaStreamTrack-getCapabilities.html:51 > + if(deviceInfo.deviceId === deviceId && deviceInfo.kind === deviceKind) { Ditto. > LayoutTests/fast/mediastream/MediaStreamTrack-getCapabilities.html:89 > + },e => { Nit: missing a space between "," and "e"
jianjun.zhu
Comment 6 2018-06-11 18:54:57 PDT
Eric Carlson
Comment 7 2018-06-12 07:58:44 PDT
Comment on attachment 342500 [details] Patch r=me
Eric Carlson
Comment 8 2018-06-12 08:02:30 PDT
Jianjun - for future reference, a patch doesn't *need* another review once a reviewer give it an "r+". Replace "NOBODY (OOPS!)" with the reviewer's name before you upload the revised patch, mark it "cq?" and any committer can mark it "cq+"
WebKit Commit Bot
Comment 9 2018-06-12 08:28:20 PDT
Comment on attachment 342500 [details] Patch Clearing flags on attachment: 342500 Committed r232754: <https://trac.webkit.org/changeset/232754>
WebKit Commit Bot
Comment 10 2018-06-12 08:28:22 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 11 2018-06-12 08:29:20 PDT
jianjun.zhu
Comment 12 2018-06-12 08:58:23 PDT
Eric, thanks for reviewing the patch and letting me know the review process.
Note You need to log in before you can comment on or make changes to this bug.