Hash deviceId and groupId of MediaTrackCapabilities. https://bugs.webkit.org/show_bug.cgi?id=186471

Patch by Jianjun Zhu <jianjun.zhu@intel.com> on 2018-06-12
Reviewed by Eric Carlson.

This change makes the identifier for the source of the MediaStreamTrack
has the same value returned by enumerateDevices(). It also prevents real
device ID being leaked.

Source/WebCore:

(WebCore::MediaStreamTrack::getCapabilities const):
* Modules/mediastream/MediaStreamTrack.h:
* Modules/mediastream/MediaStreamTrack.idl:

LayoutTests:

* fast/mediastream/MediaStreamTrack-getCapabilities.html:

Canonical link: https://commits.webkit.org/201885@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232754 268f45cc-cd09-0410-ab3c-d52691b4dbfc